Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48984

WebEngineView properties are not re-associated with new adapter when adoptWebContent is called

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.5.1
    • WebEngine
    • None
    • WebOS-Ports project LuneOS on smartphone "mako" N4 device, using WebEngineView, UserScripts and a WebChannel.
      Stack is a classic QtWayland/Linux, with our own QPA for platform-specific bits.
    • Ief41fe9619f4300d7a0c25a57f09f5eefe3fca3d I87cb224899458ba8f2d0343ed98932cfc8a6947f

      When using WebEngineView together with UserScripts or WebChannel, and when the web page start a "window.open" request, a new WebContent gets created.
      However, in the adoptNewContent is called, the new adapter is taken in place of the previous one without re-associating the user scripts nor the webchannel, leading to crashes or misbehaving.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            tofe Christophe Chapuis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes