adoptWebContents: re-associate webchannel with new adapter

Task-number: QTBUG-48984
Change-Id: Ief41fe9619f4300d7a0c25a57f09f5eefe3fca3d
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>