src/webengine/api/qquickwebengineview.cpp
@@ -558,10 +558,20 @@ void QQuickWebEngineViewPrivate::adoptWebContents(WebContentsAdapter *webContent
     }
 
     Q_Q(QQuickWebEngineView);
+
+    // memorize what webChannel we had for the previous adapter
+    QQmlWebChannel *qmlWebChannel = NULL;
+    if (adapter)
+        qmlWebChannel = qobject_cast<QQmlWebChannel *>(adapter->webChannel());
+
     // This throws away the WebContentsAdapter that has been used until now.
     // All its states, particularly the loading URL, are replaced by the adopted WebContentsAdapter.
     adapter = webContents;
     adapter->initialize(this);
+
+    // associate the webChannel with the new adapter
+    if (qmlWebChannel)
+        adapter->setWebChannel(qmlWebChannel);
 
     // Emit signals for values that might be different from the previous WebContentsAdapter.
     emit q->titleChanged();
